--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <div class="container">
                 <a class="navbar-brand" href="#" onclick="display('sectionHome-details')">
-                    <img src=" https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png" width="50">
+                    <img src="https://github.com/6305515221/M14/blob/main/1000168849_11zon.jpg?raw=true" width="50">
                 </a>
                 <button class="navbar-toggler threebutton " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon "></span>
