--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="row">
                         <div class="col-12 col-md-5 order-1 order-md-2">
                             <div class=" text-center">
-                                <img src="C:\Users\pavan\OneDrive\Desktop\RESPONSIVE HTML\protofilo\pavan-modified.png" class="profile-image">
+                                <img src="https://github.com/6305515221/M14/blob/main/1000168849_11zon.jpg?raw=true" class="profile-image">
                             </div>
                         </div>
         
